[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = ""
license = "MIT"
name = "TinyAlphaZero"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
click = "^8.1.3"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
python = "^3.9"
rich = "^13.5.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
poetry = "^1.5.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
